# edu-accountability

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  CLAUDE.md  DECISION_LOG.md  DISCLAIMER.md  LICENSE  LOG.md  README.md  app.py  pyproject.toml  render.yaml  requirements.txt
.claude/agents/: roi-feature-architect.md
archive/: app_legacy.py
archive/docs/: CLAUDE.md  FEATURE_ALPHA_Earnings_Premium.md  PHASE_01_PLAN_v2.md  PHASE_4_1_NATIONWIDE_BASELINE_BUILD.md  PHASE_4_STATUS_REPORT.md  PROJECT_CANONICAL_PIPELINE_INTEGRATION.md  ROI-Feature.md
data/dictionary/: schema.json  sources.yaml
data/processed/: build_pell_grad_rate_scatter.py  build_pell_top_dollars.py  build_pell_vs_grad_scatter.py  ep_analysis.parquet  faculty_metrics.csv  faculty_metrics.parquet  fsa_dl_volume.parquet  loan_totals_cod.csv  loan_totals_cod.parquet  pell_grad_rate_scatter_four_year.csv  pell_grad_rate_scatter_two_year.csv  pell_top_dollars.csv  pell_top_dollars_four_year.csv  pell_top_dollars_trend_four_year.csv  pell_top_dollars_trend_two_year.csv  pell_top_dollars_two_year.csv  pell_vs_grad_scatter.csv  (+8 more)
docs/: DATA_DICTIONARY.md  DATA_STRATEGY.md  FEATURE_LOG.md  README_canonical_ipeds_grad.md  article_what_is_lost_summary.md  data_dictionary_ipeds_grad.md  data_provenance.md  deanza_data_review.md  ipeds_missing_metadata.md  ipeds_raw_inventory.md  rate_policy_ipeds_grad.md  roi_feature_plan.md  schema_canonical_ipeds_grad.md  schema_canonical_percent_loans.md  schema_canonical_percent_pell.md  streamlit_ui_buildplan.md  streamlit_ui_spec.md
tests/: test_ep_calculations.py
(+158 files in other folders)
